--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 
 <div class="jumbotron">
     <div class="container">
-      <h1>Hello, world!</h1>
-      <p>Bienvenue Sur mon Application ! Prêt a démarrer ? </p>
-      <p><a class="btn btn-primary btn-lg" href="./signIn.html" role="button">login now </a></p>
-      <p>Pas encore inscrit?  <a href="./register.html">Crée un compte </a></p>
+      <p>Bienvenue sur le site de tes stats Fortnite ! </p>
+      <p><a class="btn btn-primary btn-lg" href="./signIn.html" role="button">Login now </a></p>
+      <p>Pas encore inscrit?  <a href="./register.html">Créer un compte </a></p>
     </div>
   </div>
